#74 Fix overflow on long card names when trying to remove a card

--- a/cardDatabase/static/css/edit_decklist_mobile.css
+++ b/cardDatabase/static/css/edit_decklist_mobile.css
@@ -92,6 +92,7 @@
     flex: 1;
     padding-left: 10px;
     margin: auto 0;
+    word-break: break-word;
 }
 
 .remove-card, .remove-zone{
